Fix broken css
From a previous commit, class names were changed in html while not
changed in css. Updated the names to be consistent between files.

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,13 +1,13 @@
-button.text {
+button.black, button.yellow {
     font-size: 28px;
     font-family: Helvetica, 'Times New Roman', sans-serif;
 }
 
-button.black-background {
+button.black{
     background-color: black;
     color: white;
 }
 
-button.yellow-background {
+button.yellow {
     background-color: yellow;
 }
